fix: implement suggestions from code review remove unneeded dependency and unused methods